# hometask_Django

./: pyproject.toml
quotes/quotes/: settings.py  urls.py
quotes/quotesapp/: forms.py  models.py  urls.py  views.py
quotes/quotesapp/templates/quotesapp/: add_author.html  add_quote.html  add_tags.html  base.html  main.css  quotes.html
quotes/users/: forms.py  urls.py  views.py
quotes/users/templates/: login.html  logout.html  profile.html  register.html
